variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: ';' expected but '=' found.
dejaFait: Int =0
              ^